Mise à jour du fr.json v0.0.1 fixes

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,14 +1,12 @@
 {
-    "help_description": "[Votez ici](https://top.gg/bot/593364281572196353) pour soutenir mon travail si vous ❤️ le bot\n`[RequiredArgument] <Paramètre| à| Choisir>`\n[Source code et commandes](https://takitsu21.github.io/WarframeTrader/)",
+    "help_description": "[Votez ici](https://top.gg/bot/593364281572196353) pour soutenir mon travail si vous ❤️ le bot\n`[ArgumentRequis] <Paramètre| à | Choisir>`\n[Code source et commandes](https://takitsu21.github.io/WarframeTrader/)",
     "help_waframe_market_description": "Voir les commandes à propos de warframe.market(WTS, WTB, stats).",
-    "help_worldstate_description": "Voir les commandes à propos de worldstate data (arbitration, fissures etc...)",
+    "help_worldstate_description": "Voir les commandes à propos de worldstate data (arbitration, fissures, etc.)",
     "help_bot_utility": "Voir les commandes du bot",
     "help_wtb": "Voir les 7 vendeurs triés par prix et statuts (En ligne en jeu)",
     "help_wts": "Voir les 4 acheteurs triés par prix et statuts (En ligne en jeu)",
     "help_riven": "Voir les 6 mods rivens triés par prix croissant et statuts (En ligne en jeu)",
     "help_ducats": "Voir les 18 parties primes les plus rentable pour les vendre en ducats",
-    "help_fissures": "Voir les fissures disponibles",
-    "help_sortie":  "Voir ce que propose la sortie",
     "help_baro": "Voir ce que propose Baro ki'teer ou sa date de retour",
     "help_news": "Voir les nouveautés sur les Warframes",
     "help_earth": "Voir l'heure qu'il est sur Terre",
@@ -33,28 +31,27 @@
     "command_vote_title": "Votez sur Warframe Trader",
     "command_about_title": "Commande d'aide",
     "command_settings_delete_title": "Supprimer des messages",
-    "command_settings_delay": "Delai",
-    "command_settings_check_description": "Ceci est les options du serveur ({0})",
+    "command_settings_delay": "Délai",
+    "command_settings_check_description": "Voici les options du serveur ({0})",
     "command_settings_check_description_updated": "Vos options du serveur ({0}) ont été mises à jours :) !",
     "command_settings_update": "Options mises à jour",
     "command_set_prefix": "Nouveau préfixe : `{0}`",
-    "command_get_prefix_title": "Prefix",
+    "command_get_prefix_title": "Préfixe",
     "command_suggestion_title": "Suggestion",
-    "command_suggestion_sent": "{0} Votre suggestion a bien été envoyé à  @Taki#0853\nMerci pour votre retour :)!",
+    "command_suggestion_sent": "{0} Votre suggestion a bien été envoyé à @Taki#0853\nMerci pour votre retour :)!",
     "command_bug_title": "Report de bug...",
-    "command_bug_sent": "{0} Votre envoi de bug a bien été envoyé à @Taki#0853\nMerci pour ce retour ;)!",
+    "command_bug_sent": "{0} Votre envoi de bug a bien été envoyé à @Taki#0853\nMerci pour ce retour :)!",
 
     "command_stat_msg_title": " Voici ci-dessous {0} le graphe ",
 
     "command_wtb_title": "💰WTB {0}💰\n<:_purple_circle:643936797222764554> En ligne et en jeu - Trier par prix",
     "command_wtb_description": "Voir le graphique des stats",
     "command_wtb_field_name_offer": "{0}. **{1}** | +**{2}**🙂 for **{3}** <:pl:632332600538824724> x **{4}** pieces",
-    "command_wtb_field_name_no_offer": "0 Offrir pour {0}",
+    "command_wtb_field_name_no_offer": "0 offre pour {0}",
     "command_wtb_field_value_no_offer": "Il n'y a Personne en ligne ou en jeu qui vendent cet objet actuellement (désolé :/)\nReviens plus tard bro",
     "command_wts_title": "💰WTS {0}💰\n<:_purple_circle:643936797222764554> En ligne et en jeu - Trier par prix",
     "command_wts_description": "Voir le graphique des stats",
     "command_wts_field_name_offer": "{0}. **{1}** | +**{2}**🙂 for **{3}** <:pl:632332600538824724> x **{4}** pieces",
-    "command_wts_field_value_offer": "||`/w {0} Hi! I want to sell: {1} for {2} platinum. (warframe.market - Warframe Trader)`||",
     "command_riven_status_description": "<:_green_circle:643936852327530548> Online | En ligne et en jeu <:_purple_circle:643936797222764554>",
     "command_riven_author_name": "Les enchères des rivens sont à {0}",
     "command_riven_field_value_item_description": "Prix ​​de rachat {0} | Prix ​​de départ {1} | Meilleure enchère {2}\nPolarité {3} | MR {4}\nRe-rolls {5} | Niveau du mod {6}\n[View Riven](https://warframe.market/auction/{7})\n|| `/w {8} Hi!` ||",
