--- a/locales/fr.json
+++ b/locales/fr.json
@@ -1,12 +1,16 @@
 {
-    "help_description": "[Votez ici](https://top.gg/bot/593364281572196353) pour soutenir mon travail si vous ❤️ le bot\n`[ArgumentRequis] <Paramètre| à | Choisir>`\n[Code source et commandes](https://takitsu21.github.io/WarframeTrader/)",
+    "help_title": "Accueil de la commande help",
+    "help_description": "[Votez ici](https://top.gg/bot/593364281572196353) pour soutenir mon travail si vous ❤️ le bot\n`[ArgumentRequis] <Paramètre | à | Choisir>`\n[Code source et commandes](https://takitsu21.github.io/WarframeTrader/)",
     "help_waframe_market_description": "Voir les commandes à propos de warframe.market(WTS, WTB, stats).",
     "help_worldstate_description": "Voir les commandes à propos de worldstate data (arbitration, fissures, etc.)",
-    "help_bot_utility": "Voir les commandes du bot",
+    "help_bot_utility_name": "Warframe Trader outils",
+    "help_bot_utility_value": "Voir les commandes du bot",
     "help_wtb": "Voir les 7 vendeurs triés par prix et statuts (En ligne en jeu)",
-    "help_wts": "Voir les 4 acheteurs triés par prix et statuts (En ligne en jeu)",
+    "help_wts": "Voir les 7 acheteurs triés par prix et statuts (En ligne en jeu)",
     "help_riven": "Voir les 6 mods rivens triés par prix croissant et statuts (En ligne en jeu)",
     "help_ducats": "Voir les 18 parties primes les plus rentable pour les vendre en ducats",
+    "help_fissures": "Voir les fissures disponibles, vous pouvez ajouter un filtre, par exemple **`*f pc requiem axi survie`** les arguments filtre vont montrer uniquement les missions requiem, axi et survie (une infinité d'arguments filtre sont acceptés séparé par un espace)",
+    "help_sortie":  "Voir la sortie actuel",
     "help_baro": "Voir ce que propose Baro ki'teer ou sa date de retour",
     "help_news": "Voir les nouveautés sur les Warframes",
     "help_earth": "Voir l'heure qu'il est sur Terre",
@@ -18,18 +22,21 @@
     "help_suggestion": "Si vous avez des suggestion à me faire, n'hésitez à me les envoyer car comme dit l'adage : tout est bon dans le cochon ! :)",
     "help_ping": "Permet de voir la latence du bot",
     "help_about": "Permet de voir les informations sur le bot.",
-    "help_donate": "Voici quelques liens si vous souhaitez me soutenir:).",
+    "help_donate": "Voici quelques liens si vous souhaitez me soutenir :).",
     "help_vote": "Une autre façon pour me soutenir..",
-    "help_support": "C'est le lien de mon serveur test sur ce bot si vous souhaitez avoir de l'aide tout simplement discuter avec moi svp venez je suis seul :'(.",
+    "help_support": "C'est le lien de mon serveur test sur ce bot si vous souhaitez avoir de l'aide tout simplement discuter avec moi.",
     "help_invite": "Donne le lien d'invitation du bot.",
+    "help_language": "Langues supporter pour le moment (**fr**, **en**). Langues non supporter mais contribuable (de, es, it, ja, ko, pl, pt, ru, tc, tr) vous pouvez contribuer à l'avancement de la traduction [ici](https://github.com/takitsu21/WarframeTrader/tree/master/locales) en faisant des pull requests.",
     "help_set_prefix": "Permet de changer le prefix -le ptit truc qui permet au bot de faire les commandes- mais seulement les admins peuvent le faire (ou les personnes ayant ce droit de le faire).",
     "help_get_prefix": "Permet de voir le prefix défini par le serveur.",
     "help_settings_delete": "Permet de garder ou non l'historique des messages mais seulement les admins (ou personne ayant les droits) qui peuvent recourrir à cette commande.",
     "help_settings_delay": "Change la durée du message avant sa destruction (seul les admins ou les personnes ayant le droits peuvent le faire)",
     "help_help": "Permet de voir les commandes disponibles. Vous pouvez utiliser `all` si vous souhaitez lister toutes les commandes en une fois.",
+    "help_error": "Commandes disponibles",
 
     "command_vote_title": "Votez sur Warframe Trader",
     "command_about_title": "Commande d'aide",
+    "command_about_contributor": "Liste des contribueurs",
     "command_settings_delete_title": "Supprimer des messages",
     "command_settings_delay": "Délai",
     "command_settings_check_description": "Voici les options du serveur ({0})",
@@ -41,6 +48,12 @@
     "command_suggestion_sent": "{0} Votre suggestion a bien été envoyé à @Taki#0853\nMerci pour votre retour :)!",
     "command_bug_title": "Report de bug...",
     "command_bug_sent": "{0} Votre envoi de bug a bien été envoyé à @Taki#0853\nMerci pour ce retour :)!",
+    "command_language_title": "Paramètre de langues",
+    "command_language_description": "Votre ancienne langue sur ce serveur était {0} ({1}) a bien été mis à jour en {2}",
+    "command_language_description_no_lang": "La langue actuel sur ce serveur est {0} ({1})",
+    "command_language_description_error": "{0} n'est pas un language de la liste disponible. Langues supporter pour le moment (**fr**, **en**). Langues non supporter mais contribuable (de, es, it, ja, ko, pl, pt, ru, tc, tr) vous pouvez contribuer à l'avancement de la traduction [ici](https://github.com/takitsu21/WarframeTrader/tree/master/locales) en faisant des pull requests.",
+    "command_ping_title": "Warframe Trader latence",
+    "command_help_invalide_arg": "{0} Vous avez fourni un arugment invalide, réessaye plutôt avec `{1}help all`",
 
     "command_stat_msg_title": " Voici ci-dessous {0} le graphe ",
 
@@ -87,6 +100,9 @@
     "command_fish_title_cetus": "Carte de pêche de Cetus",
     "command_fish_provide_valid_map": "{0} Hum...Je ne connais pas cette localisation mais uniquement celles de `fortuna` et `cetus`",
 
+    "yes": "oui",
+    "no": "non",
+    "error": "❌Erreur❌",
     "reputation": "réputation",
     "credits": "credits",
     "wrong_item_name": "Je ne reconnais pas cet objet (je pense que vous l'avez mal écrit Tenno) 🤔 ou alors l'API rencontre des problèmes :thinking: mais réessayer plus tard Tenno !",
@@ -97,7 +113,7 @@
     "members": "Membres",
     "creator": "**Créateur**",
     "time_left": "Temps restant",
-    "discord_support_title": "Soutiens Discord",
+    "discord_support_title": "Mon serveur discord",
     "click_here": "Cliquez ici",
     "invite_bot": "Inviter Warframe Trader",
     "igname": "Nom en jeu",
