--- a/locales/ko.json
+++ b/locales/ko.json
@@ -1,13 +1,15 @@
 {
+    "help_title": "Help hub",
     "help_description": "[Vote here](https://top.gg/bot/593364281572196353) to support my work if you ❤️ the bot\n`[RequiredArgument] <Parameter | To | Choose>`\n[Source code and commands](https://takitsu21.github.io/WarframeTrader/)",
     "help_waframe_market_description": "Views commands about warframe.market(WTS, WTB, stats).",
     "help_worldstate_description": "Views commands about worldstate data (arbitration, fissures etc...)",
-    "help_bot_utility": "Views commands about the bot",
+    "help_bot_utility_name": "Warframe Trader utility",
+    "help_bot_utility_value": "Views commands about the bot",
     "help_wtb": "Views 7 sellers sort by prices and status (Online in game)",
     "help_wts": "Views 7 buyers sort by prices and status (Online in game)",
     "help_riven": "Views 6 riven mod sorted by ascending prices and status (Online in game)",
     "help_ducats": "Views 18 worth it items to sell in ducats",
-    "help_fissures": "Views current fissures available",
+    "help_fissures": "Views current fissures available, you can add filter, for exemple **`*f pc requiem axi survival`** the filter arguments will show only requiem, axi and survival missions (infinite filter accepted separated with space)",
     "help_sortie":  "Views current sortie",
     "help_baro": "Views baro ki'teer inventory and dates",
     "help_news": "Views news about Warframe",
@@ -24,14 +26,17 @@
     "help_vote": "An other way to support me",
     "help_support": "Discord support if you need help or want to discuss with me",
     "help_invite": "Views bot link invite",
+    "help_language": "Languages supported for now (**fr**, **en**). Languages not supported but you can contribute (de, es, it, ja, ko, pl, pt, ru, tc, tr) [Here](https://github.com/takitsu21/WarframeTrader/tree/master/locales) by doing pull requests.",
     "help_set_prefix": "Set new prefix, Only admins",
     "help_get_prefix": "Views actual guild prefix",
     "help_settings_delete": "Change message settings, Only admins",
     "help_settings_delay": "Change message delay setting, Only admins",
     "help_help": "Views bot commands, you can provide argument `all` if you want all the commands in one",
+    "help_error": "Available commands",
 
     "command_vote_title": "Vote for Warframe Trader",
     "command_about_title": "Help command",
+    "command_about_contributor": "Contributor list",
     "command_settings_delete_title": "Delete messages",
     "command_settings_delay": "Delay",
     "command_settings_check_description": "Here is your guild settings ({0})",
@@ -43,8 +48,14 @@
     "command_suggestion_sent": "{0} Your suggestion has been sent @Taki#0853\nThanks for the feedback!",
     "command_bug_title": "Bug report",
     "command_bug_sent": "{0} Your bug report has been sent @Taki#0853\nThanks for the feedback!",
+    "command_language_title": "Language Settings",
+    "command_language_description": "Your previous guild language was {0} ({1}) has been successfully setted up as {2}",
+    "command_language_description_no_lang": "Your actual guild language is {0} ({1})",
+    "command_language_description_error": "{0} is not in the languages list. Languages supported for now (**fr**, **en**). Languages not supported but you can contribute (de, es, it, ja, ko, pl, pt, ru, tc, tr) [Here](https://github.com/takitsu21/WarframeTrader/tree/master/locales) by doing pull requests.",
+    "command_ping_title": "Warframe Trader ping",
+    "command_help_invalide_arg": "{0} You provided an invalide argument, try with `{1}help all`",
 
-    "command_stat_msg_title": " Here is {0} graph below",
+    "command_stat_msg_title": "{0} Your {1} graph below",
 
     "command_wtb_title": "💰WTB {0}💰\n<:_purple_circle:643936797222764554> Online in game - Sort by prices",
     "command_wtb_description": "View grapghical stats",
@@ -89,6 +100,9 @@
     "command_fish_title_cetus": "Cetus fishing map",
     "command_fish_provide_valid_map": "{0} Please provide a valid map location like `fortuna` or `cetus`",
 
+    "yes": "yes",
+    "no": "no",
+    "error": "❌Error❌",
     "reputation": "reputation",
     "credits": "credits",
     "wrong_item_name": "You might have spelled a wrong item name 🤔 or the API is basically down, try later tenno!",
@@ -102,6 +116,7 @@
     "discord_support_title": "Discord support",
     "click_here": "Click here",
     "invite_bot": "Invite Warframe Trader",
+    "kofi": "Buy me a kofi",
     "igname": "IGName",
     "donate": "Donate"
 }
