--- a/locales/fr.json
+++ b/locales/fr.json
@@ -10,7 +10,7 @@
     "help_riven": "Voir les 6 mods rivens triés par prix croissant et statuts (En ligne en jeu)",
     "help_ducats": "Voir les 18 parties primes les plus rentable pour les vendre en ducats",
     "help_fissures": "Voir les fissures disponibles, vous pouvez ajouter un filtre, par exemple **`*f pc requiem axi survie`** les arguments filtre vont montrer uniquement les missions requiem, axi et survie (une infinité d'arguments filtre sont acceptés séparé par un espace)",
-    "help_sortie":  "Voir la sortie actuel",
+    "help_sortie": "Voir la sortie actuel",
     "help_baro": "Voir ce que propose Baro ki'teer ou sa date de retour",
     "help_news": "Voir les nouveautés sur les Warframes",
     "help_earth": "Voir l'heure qu'il est sur Terre",
@@ -65,7 +65,7 @@
     "command_wts_title": "💰WTS {0}💰\n<:_purple_circle:643936797222764554> En ligne et en jeu - Trier par prix",
     "command_wts_description": "Voir le graphique des stats",
     "command_wts_field_name_offer": "{0}. **{1}** | +**{2}**🙂 for **{3}** <:pl:632332600538824724> x **{4}** pieces",
-    "command_riven_status_description": "<:_green_circle:643936852327530548> Online | En ligne et en jeu <:_purple_circle:643936797222764554>",
+    "command_riven_status_description": "<:_green_circle:643936852327530548> En ligne | En ligne et en jeu <:_purple_circle:643936797222764554>",
     "command_riven_author_name": "Les enchères des rivens sont à {0}",
     "command_riven_field_value_item_description": "Prix ​​de rachat {0} | Prix ​​de départ {1} | Meilleure enchère {2}\nPolarité {3} | MR {4}\nRe-rolls {5} | Niveau du mod {6}\n[View Riven](https://warframe.market/auction/{7})\n|| `/w {8} Hi!` ||",
     "command_riven_field_name_attributes": "Attribues",
@@ -87,7 +87,7 @@
     "command_earth_field_name_state": "Etat",
     "command_event_title": "Evènement actuel",
     "command_event_description_no_event": "Il n'y a pas d'évènement pour le moment\nRevenez plus tard tenno!",
-    "command_nightwave_description" : "Cette saison expire dans {0}\nLes défis de la semaine expirent dans {1}",
+    "command_nightwave_description": "Cette saison expire dans {0}\nLes défis de la semaine expirent dans {1}",
     "command_nightwave_author_name_actual_season": "Saison des ondes nocturnes {0}",
     "command_nightwave_no_nightwave": "{0} Il n'y a pas d'opération des ondes nocturnes pour l'instant!",
     "command_sentient_title_active": "Le vaisseau sentient est actif.",
