--- a/locales/zh.json
+++ b/locales/zh.json
@@ -10,7 +10,7 @@
     "help_riven": "Views 6 riven mod sorted by ascending prices and status (Online in game)",
     "help_ducats": "Views 18 worth it items to sell in ducats",
     "help_fissures": "Views current fissures available, you can add filter, for exemple **`*f pc requiem axi survival`** the filter arguments will show only requiem, axi and survival missions (infinite filter accepted separated with space)",
-    "help_sortie": "Views current sortie",
+    "help_sortie":  "Views current sortie",
     "help_baro": "Views baro ki'teer inventory and dates",
     "help_news": "Views news about Warframe",
     "help_earth": "Views earth cycle",
@@ -87,7 +87,7 @@
     "command_earth_field_name_state": "State",
     "command_event_title": "Current Events",
     "command_event_description_no_event": "There is no events for now\nCome back later tenno!",
-    "command_nightwave_description": "This season expire in {0}\nWeek challenges expire in {1}",
+    "command_nightwave_description" : "This season expire in {0}\nWeek challenges expire in {1}",
     "command_nightwave_author_name_actual_season": "Nightwave season {0}",
     "command_nightwave_no_nightwave": "{0} There is no Nightwave operation for now!",
     "command_sentient_title_active": "Sentient ship active",
@@ -99,6 +99,11 @@
     "command_fish_title_fortuna": "Fortuna fishing map",
     "command_fish_title_cetus": "Cetus fishing map",
     "command_fish_provide_valid_map": "{0} Please provide a valid map location like `fortuna` or `cetus`",
+    "command_acolytes_author_title": "Acolytes [{0}]",
+    "command_acolytes_title_not_available": "Acolytes are not available for now",
+    "command_acolytes_field_name": "{0} rank {1}",
+    "command_acolytes_field_value_discovered": "Discovered on {0}\nHealth left : {1:.2f}%",
+    "command_acolytes_field_value_not_discovered": "Not discovered\nHealth left : {0:.2f}%",
 
     "yes": "yes",
     "no": "no",
